see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Dec-2011 Mark Dexter
 ^ [#27361] mod_status optimization (Kyle Ledbetter)

18-Dec-2011 Jean-Marie Simonet
 # Correcting Rev 22542 reintroducing error corrected in #27342 (Type display in Plugin Manager)
 $ Miscellaneous corrections to ini strings (duplicate, extraneous spaces). Thanks Valc.
 $ Updating installation ini files ka-GE. Adding new language ur-PK.
 $ Missing string.
 - Taking off unused string (for now) from installation en-GB and en-US added in #27282
 # [#27411] *Batch language action broken for categories.
 ^ Updating xml version to 2.5

17-Dec-2011 Mark Dexter
 + [#27387] Catch up to the current platform
 + [#27282] Add ability to support other databases, starting with Microsoft SQL Server (thanks Hooduku)

17-Dec-2011 Christophe Demko
 # [#27401] Strict standards: Declaration of TemplatesModelStyle
 # [#27400] Strict standards: Declaration of CategoriesModelCategory
 $ [#27370] Search Result Menu (Jean-Marie Simonet)
 + [#27330] Add an option to filter the mod_whosonline by groups of the connected user

17-Dec-2011 Jean-Marie Simonet
 # Adding Tamil ta.gif flag to language switcher. Thanks Mig
 $ Updating installation ini files az-AZ, fa-IR, gd-GB, gu-IN, he-IL, it-IT, km-KH, uk-UA
 # [#27402] *Simplifying code for copy title/alias for menu item
 # [#26887] Duplicated (unnecesary) pagination code in featured contact's default_items.php. Thanks Peter and Denise
 # [#26672] Add a check for native ZIP support to the Installation
 $ Updating installation ini files fi-FI, ja-JP, pl-PL, zh-TW
 # [#27405] Menu item save as copy does not work. Thanks Christophe.
