@@ -86,6 +86,10 @@ class ContentModelArticles extends JModelList
 
 		$categoryId = $this->getUserStateFromRequest($this->context.'.filter.category_id', 'filter_category_id');
 		$this->setState('filter.category_id', $categoryId);
+		
+		$level = $this->getUserStateFromRequest($this->context.'.filter.level', 'filter_level', 0, 'int');
+		$this->setState('filter.level', $level);
+
 
 		$language = $this->getUserStateFromRequest($this->context.'.filter.language', 'filter_language', '');
 		$this->setState('filter.language', $language);
@@ -185,14 +189,26 @@ class ContentModelArticles extends JModelList
 		}
 
 		// Filter by a single or group of categories.
+		$baselevel = 1;
 		$categoryId = $this->getState('filter.category_id');
 		if (is_numeric($categoryId)) {
-			$query->where('a.catid = '.(int) $categoryId);
+			$cat_tbl = JTable::getInstance('Category', 'JTable');
+			$cat_tbl->load($categoryId);
+			$rgt = $cat_tbl->rgt;
+			$lft = $cat_tbl->lft;
+			$baselevel = (int) $cat_tbl->level;
+			$query->where('c.lft >= '.(int) $lft);
+			$query->where('c.rgt <= '.(int) $rgt);
 		}
 		elseif (is_array($categoryId)) {
 			JArrayHelper::toInteger($categoryId);
 			$categoryId = implode(',', $categoryId);
 			$query->where('a.catid IN ('.$categoryId.')');
+		}
+		
+		// Filter on the level.
+		if ($level = $this->getState('filter.level')) {
+			$query->where('c.level <= '.((int) $level + (int) $baselevel - 1));
 		}
 
 		// Filter by author
