@@ -51,7 +51,6 @@ COM_CATEGORIES_N_ITEMS_TRASHED="%d categories successfully trashed"
 COM_CATEGORIES_N_ITEMS_TRASHED_1="%d category successfully trashed"
 COM_CATEGORIES_N_ITEMS_UNPUBLISHED="%d categories successfully unpublished"
 COM_CATEGORIES_N_ITEMS_UNPUBLISHED_1="%d category successfully unpublished"
-COM_CATEGORIES_OPTION_SELECT_LEVEL="- Select Max Levels -"
 COM_CATEGORIES_REBUILD_FAILURE="Failed rebuilding Categories tree data."
 COM_CATEGORIES_REBUILD_SUCCESS="Categories tree data successfully rebuilt."
 COM_CATEGORIES_SAVE_SUCCESS="Category successfully saved"
