@@ -660,6 +660,7 @@ JOPTION_SELECT_MENU="- Select Menu -"
 JOPTION_SELECT_MENU_ITEM="- Select Menu Item -"
 JOPTION_SELECT_PUBLISHED="- Select Status -"
 JOPTION_SELECT_TEMPLATE="- Select Template -"
+JOPTION_SELECT_MAX_LEVELS="- Select Max Levels -"
 JOPTION_UNASSIGNED="Unassigned"
 JOPTION_USE_DEFAULT_MODULE_SETTING="- Use Default Module Setting -"
 JOPTION_USE_DEFAULT="- Use Default -"
