@@ -1344,7 +1344,7 @@ fieldset.filter .right select {
 }
 
 fieldset#filter-bar {
-	height: 35px;
+	min-height: 35px;
 	border: 0;
 	border-bottom: 1px solid #d5d5d5;
 }
